--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@coffeelint/cli": "^5.2.11",
 		"@rollup/plugin-node-resolve": "^15.3.0",
 		"@types/chai": "^5.0.1",
-		"@types/koa__router": "^12.0.4",
+		"@types/koa": "^2.15.0",
 		"@types/mocha": "^10.0.9",
 		"@types/node": "^22.9.0",
 		"@types/serve-handler": "^6.1.4",
