--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
 		"@coffeelint/cli": "^5.2.11",
 		"@rollup/plugin-node-resolve": "^15.3.0",
 		"@types/chai": "^5.0.1",
+		"@types/gulp": "^4.0.17",
 		"@types/koa": "^2.15.0",
 		"@types/mocha": "^10.0.9",
 		"@types/node": "^22.9.0",
 		"@types/serve-handler": "^6.1.4",
 		"chai": "^5.1.2",
 		"coffeescript": "^2.7.0",
+		"gulp": "^5.0.0",
 		"mocha": "^10.8.2",
 		"puppeteer": "^23.7.1",
-		"rollup": "^4.25.0",
+		"rollup": "^4.26.0",
 		"serve-handler": "^6.1.6"
 	},
 	"engines": {
@@ -54,6 +56,6 @@
 		"lit": ">=3.2.0"
 	},
 	"scripts": {
-		"test": "cake test"
+		"test": "gulp test"
 	}
 }
