--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"mocha": "^10.8.2",
 		"puppeteer": "^23.7.1",
 		"rollup": "^4.26.0",
-		"serve-handler": "^6.1.6"
+		"serve-handler": "^6.1.6",
+		"source-map-support": "^0.5.21"
 	},
 	"engines": {
 		"node": ">=22.0.0"
