--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/bootstrap": "^5.2.10",
 		"@types/chai": "^5.0.1",
 		"@types/gulp": "^4.0.17",
+		"@types/koa__router": "^12.0.4",
 		"@types/koa": "^2.15.0",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^22.10.1",
@@ -26,7 +27,7 @@
 		"coffeescript": "^2.7.0",
 		"gulp": "^5.0.0",
 		"mocha": "^11.0.1",
-		"puppeteer": "^23.9.0",
+		"puppeteer": "^23.10.1",
 		"rollup": "^4.28.0",
 		"serve-handler": "^6.1.6",
 		"source-map-support": "^0.5.21"
@@ -54,6 +55,7 @@
 		"ui"
 	],
 	"peerDependencies": {
+		"@koa/router": ">=13.1.0",
 		"@lit-labs/router": ">=0.1.0",
 		"bootstrap": ">=5.3.0",
 		"koa": ">=2.15.0",
