--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 	},
 	"devDependencies": {
 		"@coffeelint/cli": "^5.2.11",
-		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@types/bootstrap": "^5.2.10",
 		"@types/chai": "^5.0.1",
+		"@types/gulp": "^4.0.17",
 		"@types/koa__router": "^12.0.4",
 		"@types/koa": "^2.15.0",
 		"@types/mocha": "^10.0.10",
@@ -24,9 +24,10 @@
 		"@types/serve-handler": "^6.1.4",
 		"chai": "^5.1.2",
 		"coffeescript": "^2.7.0",
+		"esbuild": "^0.24.2",
+		"gulp": "^5.0.0",
 		"mocha": "^11.0.1",
 		"puppeteer": "^24.0.0",
-		"rollup": "^4.30.1",
 		"serve-handler": "^6.1.6",
 		"source-map-support": "^0.5.21"
 	},
