--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,4 +15,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: aa-exec --profile=chrome node --run test
+        run: aa-exec --profile=chrome -- node --run test
