--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"@types/koa__router": "^12.0.4",
 		"@types/koa": "^2.15.0",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^22.12.0",
+		"@types/node": "^22.13.0",
 		"@types/serve-handler": "^6.1.4",
 		"chai": "^5.1.2",
 		"esbuild": "^0.24.2",
@@ -27,7 +27,10 @@
 		"mocha": "^11.1.0",
 		"puppeteer": "^24.1.1",
 		"serve-handler": "^6.1.6",
-		"source-map-support": "^0.5.21"
+		"source-map-support": "^0.5.21",
+		"typedoc": "^0.27.6",
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.22.0"
 	},
 	"engines": {
 		"node": ">=22.0.0"
