--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
 		"@types/serve-handler": "^6.1.4",
 		"chai": "^5.1.2",
 		"esbuild": "^0.24.2",
+		"globals": "^15.14.0",
 		"gulp": "^5.0.0",
 		"mocha": "^11.1.0",
-		"puppeteer": "^24.1.1",
+		"playwright": "^1.50.1",
 		"serve-handler": "^6.1.6",
 		"source-map-support": "^0.5.21",
 		"typedoc": "^0.27.6",
