Port the build system to JS

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"access": "public"
 	},
 	"scripts": {
+		"postinstall": "playwright install --with-deps chromium",
 		"test": "gulp test"
 	}
 }
