--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"@types/node": "^22.13.1",
 		"@types/serve-handler": "^6.1.4",
 		"chai": "^5.1.2",
-		"esbuild": "^0.24.2",
+		"esbuild": "^0.25.0",
 		"globals": "^15.14.0",
 		"gulp": "^5.0.0",
 		"mocha": "^11.1.0",
@@ -45,6 +45,12 @@
 		"lib/",
 		"src/"
 	],
+	"imports": {
+		"#data/*": "./lib/data/*.js",
+		"#html/*": "./lib/html/*.js",
+		"#http/*": "./lib/http/*.js",
+		"#util/*": "./lib/util/*.js"
+	},
 	"keywords": [
 		"belin",
 		"client",
@@ -59,7 +65,8 @@
 		"@lit-labs/router": ">=0.1.0",
 		"bootstrap": ">=5.3.0",
 		"koa": ">=2.15.0",
-		"lit": ">=3.2.0"
+		"lit": ">=3.2.0",
+		"tslib": ">=2.8.0"
 	},
 	"publishConfig": {
 		"access": "public"
