--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"allowJs": true,
 		"baseUrl": ".",
 		"checkJs": true,
+		"experimentalDecorators": true,
 		"incremental": true,
 		"module": "NodeNext",
 		"noEmit": true,
