Add Lit suppor to Visual Studio

--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -8,6 +8,9 @@
 		"importHelpers": true,
 		"noEmit": false,
 		"outDir": "../../lib/ui",
+		"plugins": [
+			{"name": "ts-lit-plugin"}
+		],
 		"rootDir": ".",
 		"tsBuildInfoFile": "../../var/ui.tsbuildinfo",
 		"useDefineForClassFields": false
