--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"homepage": "https://github.com/cedx/core.js",
 	"license": "MIT",
 	"name": "@cedx/core",
-	"repository": "cedx/core",
+	"repository": "cedx/core.js",
 	"type": "module",
 	"version": "2.1.1",
 	"author": {
