--- a/src/Async/tsconfig.json
+++ b/src/Async/tsconfig.json
@@ -6,8 +6,8 @@
 		"declaration": true,
 		"declarationMap": true,
 		"noEmit": false,
-		"outDir": "../../lib/async",
+		"outDir": "../../lib/Async",
 		"rootDir": ".",
-		"tsBuildInfoFile": "../../var/async.tsbuildinfo"
+		"tsBuildInfoFile": "../../var/Async.tsbuildinfo"
 	}
 }
