--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,9 +5,9 @@
 		{"path": "Caching/tsconfig.json"},
 		{"path": "Data/tsconfig.json"},
 		{"path": "DI/tsconfig.json"},
+		{"path": "Globalization/tsconfig.json"},
 		{"path": "Html/tsconfig.json"},
 		{"path": "Http/tsconfig.json"},
-		{"path": "Intl/tsconfig.json"},
 		{"path": "IO/tsconfig.json"},
 		{"path": "Net/tsconfig.json"},
 		{"path": "Security/tsconfig.json"},
